# HotasRemapper

./: Feasibility of Using HOTAS in MSFS on Xbox Console.md  LICENSE  clear_permissions.sh  format_all.sh
HotasRemapper/: .clang-format  .swift-format  ContentView.swift  HotasRemapper-Bridging-Header.h  HotasRemapperApp.swift  HotasRemapperLib.h
HotasRemapper.xcodeproj/: project.pbxproj
HotasRemapper.xcodeproj/xcshareddata/xcschemes/: HotasRemapper.xcscheme
HotasRemapperBt/: Package.swift
HotasRemapperBt/Sources/HotasRemapperBt/: BluetoothManager.swift  HotasRemapperBt.swift
HotasRemapperBt/Tests/HotasRemapperBtTests/: HotasRemapperBtTests.swift
HotasRemapperLib/: Cargo.toml  build.rs
HotasRemapperLib/HotasRemapperLib.xcodeproj/: project.pbxproj
HotasRemapperLib/src/: bindings.rs  bluetooth_manager.rs  device_manager.rs  hid_device.rs  hid_device_input.rs  hid_manager.rs  input_remapper.rs  lib.rs  main.rs  utils.rs  virtual_device.rs  virtual_device_output.rs
HotasRemapperLib/src/input_reader/: hid_device.rs  hid_device_input.rs  hid_manager.rs  mod.rs
HotasRemapperLib/src/input_remapper/: axis_remapper.rs  button_remapper.rs  hat_switch_remapper.rs  mod.rs  toggle_switch_input.rs
HotasRemapperLib/src/protos/: input_remapping.proto  input_remapping.txtpb  settings.proto  settings.txtpb
HotasRemapperLib/src/virtual_device/: bluetooth_device.rs  bluetooth_manager.rs  keyboard_input_report.rs  mod.rs
HotasRemapperRPi/: .gitignore  run_service.py  setup_virtual_keyboard
