[package]
name = "HotasRemapperLib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "*"
cocoa = "0.25.0"
core-foundation = "0.9.4"
io-kit-sys = "0.4.0"
serde_json = "*"
swift-rs = "1.0.6"

[build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }
