[package]
name = "HotasRemapperLib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "*"
cocoa = "0.25.0"
core-foundation = "0.9.4"
io-kit-sys = "0.4.0"
objc = "0.2.7"
protobuf = "3"
swift-rs = "1.0.6"

[build-dependencies]
protobuf-codegen = "3"
swift-rs = { version = "1.0.6", features = ["build"] }
